styles.css
@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");

/* Borders & Text styling */
:root {
    --font-heading: "Raleway", raleway;
    --font-body: "Raleway", raleway;

    --fs-body: 400;
    --fs-accent: 900;
    --fs-heading: 700;

    --space-xs: 0.5rem;
    --space-sm: 1rem;
    --space-md: 2rem;
}

/* Width settings */
.container {
    max-width: 92.5%;
    margin: 0 auto;
    padding: 0 var(--space-md);
}

/* Text, Colors & other styling */
body {
    font-family:
        Raleway,
        system-ui,
        -apple-system,
        sans-serif;
    line-height: 1.6;
    color: #c31717;
    --background-color: #ffffff;
    --text-alt: #3b2799;
    --box-color: #c2c2c2;
    --card-primary: #000000;
    --border-primary: #7a7a7a;
    --stripe-color: #c31717;
}

/* Dark mode colors */
body.dark {
    color: var(--background-color);
    --card-primary: var(--background-color);
    --text-alt: var(--background-color);
    --background-color: var(--text-alt);
}

/* "Dark mode" button styling */
#dark-mode-toggle {
    cursor: pointer;
    padding: 0.4rem 0.8rem;
    border: 0.1rem solid currentColor;
    background: transparent;
    color: inherit;
    border-radius: 0.4rem;
    font-size: 0.8rem;
}

/* Header variables */
header {
    background: linear-gradient(135deg, var(--text-alt) 0%, var(--text-alt) 100%);
    color: var(--background-color);
    padding: var(--space-sm) 0;
    box-shadow: 0 2rem 12rem var(--color);
    text-align: center;
}

/* Flexbox for the header */
header .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* "Stripe" class styling */
.stripe {
    background: var(--stripe-color);
    color: var(--background-color);
    padding: var(--space-xs);
}

/* Universal settings to all of the cards */
.cards {
    display: flex;
    flex-wrap: wrap;
    /* Adjusts the cards to look better on smaller screens */
    gap: var(--space-md);
}

/* Card styling */
.card {
    flex: 1 1 3rem;
    background: var(--stripe-color);
    color: var(--background-color);
    padding: var(--space-md);
    border-radius: var(--radius-md);
    border: 0.5rem solid var(--card-primary);
    transition: all 0.3s ease;
}

/* Styling of the card when selected */
.card:hover {
    transform: translateY(-0.4rem);
    box-shadow: 0 2rem 4rem var(--border-color);
    border-color: var(--box-color);
}

/* Card title styling */
.card h4 {
    font-family: var(--font-heading);
    font-size: 1.25rem;
    margin-bottom: var(--space-xs);
}

/* Makes the card unique */
.card a {
    text-decoration: none;
    color: inherit;
}

